--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,14 @@
   <div class="wrapper">
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    
+    <div class="back-music">
+      
+          <audio id="player" src="/music/mt-lrh.mp3" autoplay controls></audio>
+              <!-- <input type=button value=暂停 onclick="aaa.pause();">
+              <input type=button value=播放 onclick="aaa.play();">
+               -->          
+    </div>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -15,7 +23,7 @@
       
       <div class="trigger">
 
-        {% for cate in site.tab_categories %}
+        <!-- {% for cate in site.tab_categories %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ cate }}</a>
         {% endfor %}
 
@@ -23,7 +31,8 @@
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
-        {% endfor %}
+        {% endfor %} -->
+
 
       </div>
     </nav>
