photo description can automatically be updated

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,14 +14,9 @@
                     </svg>
                   </span>
 
-                  <span class="username">{{ site.github_username }}</span>
+                  <span class="username">Follow Pursue's Github </span>
                 </a>
                 {% endif %}
-
-                <div class="clo-xs-6">
-                              <a href="mailto:{{ site.email }}">{{ site.email }}</a>
-
-                </div>
             </div>
         </div>
 
