--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -7,11 +7,22 @@ layout: post_default
 	  <header class="post-header">
 	    <h1 class="post-title">{{ page.title }}</h1>
 
-	    <p class="post-meta pull-right">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+	    <!-- <p class="post-meta pull-right">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p> -->
 	  </header>
-
+	
 	  <article class="post-content">
+	  	<div class="meta-top">
+	  	  <a href="https://kkkkkxiaofei.github.io">
+	  	  	<div class="avatar">
+	  	  		<img thumbnail="90x90" quality="100" src="http://upload.jianshu.io/users/upload_avatars/574093/4ee77d0667a3.jpeg?imageMogr/thumbnail/90x90/quality/100" alt="4ee77d0667a3">
+	  	  	</div>
+	  	  	<span style="color:#4094c7;">{{ site.title }}</span>
+	  	  	<span>{{ page.date | date: "%b %-d, %Y" }}</span>
+	  	  </a>
+	  	</div>
+	  	<div class="clearfix">
 	    {{ content }}
+	    </div>
 	  </article>
 
 	</div>
