--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -7,6 +7,7 @@
                        
             <div class="foot-center">
               {% if site.github_username %}
+                <span class="fake-read-time">阅读 9999+</span>
                 
                 <a href="https://github.com/{{ site.github_username }}">
                   
