try to adjust to mobile device

--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -6,7 +6,7 @@
     
     <div class="back-music">
       
-          <audio id="player" src="/music/mt-lrh.mp3" autoplay controls></audio>
+          <audio id="player" src="" autoplay controls></audio>
               <!-- <input type=button value=暂停 onclick="aaa.pause();">
               <input type=button value=播放 onclick="aaa.play();">
                -->          
