post an article about shrink-to-fit

--- a/_layouts/layout0707.html
+++ b/_layouts/layout0707.html
@@ -34,7 +34,7 @@
   		<div id="content">
   			<div id="box1" class="welcome">
   				<h2 class="title"><a href="#">Welcome to Pursue's Blog</a></h2>
-  				<p class="introduce">Hello everyone, i'm <strong>Pursue</strong>.This is my blog for communicating with people who skill or like at programming.I don't think that coding can change the world(not as a geeker), but i feel that my lift can be more meaningful under my keyboard.</p>
+  				<p class="introduce">Hello everyone, i'm <strong>Pursue</strong>.This is my blog for communicating with people who skill or like at programming.I don't think that coding can change the world(not as a geeker), but i feel that my life can be more meaningful under my keyboard.</p>
   				<p class="sign">PS: I'm a slow walker, but i will never walk backward...</p>
   			</div>
   			<div>
