--- a/_includes/post_head.html
+++ b/_includes/post_head.html
@@ -2,9 +2,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-
+    <link rel="icon" type="image/png" href="/../img/link-icon.png" sizes="640x640" />
     <meta name="description" content="{{ site.description }}">
 
 	{% for post_css_link in site.css_links %}
