add a demo node

--- a/_layouts/layout0707.html
+++ b/_layouts/layout0707.html
@@ -70,6 +70,10 @@
   					<p class="date">Jun 11, 2015</p>
   					<p><a href="https://kkkkkxiaofei.github.io/lyric-demo">This a demo for playing music by using  HTML5 tag 'audio' -- It realize the lyric synchronizing and you can down it if you like.</a></p>
   				</li>
+          <li class="first">
+  					<p class="date">Dec 2, 2015</p>
+  					<p><a href="https://github.com/kkkkkxiaofei/Dig-Knockout">Dig-Knockout is a tiny library which trys to show you how the popular library of MVVM works. Maybe you are confused for the mechanism because you have experienced many similar frameworks only by calling API.</a></p>
+  				</li>
   			</ul>
   		</div>
   	</div>
