--- a/css/default.css
+++ b/css/default.css
@@ -438,9 +438,6 @@ ul.style3 .first .date
 	}
 }
 
-
-
-
 .style1 li:nth-child(odd) {
 	animation-duration: 2s;
 	-webkit-animation-duration: 2s;
@@ -493,6 +490,7 @@ ul.style3 .first .date
 }
 
 #sidebar {
+	background-color: #0C0C0C;
 	animation-duration: 2s;
 	-webkit-animation-duration: 2s;
 	-moz-animation-duration: 2s;
